♻️ refactor: toList()로 수정
- collect(Collectors.toList())에서 toList()로 수정